--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 *.class
 
-
+#ignore repdev generated files
+*.conf
+backup/*
 #ignore thumbnails created by windows
 Thumbs.db
+#ignore vim generated files
+*~
+*.swp
 #Ignore files build by Visual Studio
 *.obj
 *.exe
